feat(link): add Caffine Cache on hot req(redirects,stats)